# mr-postman

./: .gitignore  README.md  pyproject.toml
.github/workflows/: digest.yml
src/mr_postman/: config.py  fetch.py  main.py  render.py  send.py  summarize.py
templates/: digest.html.j2
