[project]
name = "mr-postman"
version = "0.1.0"
description = "Daily AI-curated political news digest delivered by email"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0",
    "openai>=1.0",
    "instructor>=1.0",
    "jinja2>=3.1",
    "pydantic-settings>=2.13.1",
]

[project.scripts]
mr-postman = "mr_postman.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mr_postman"]

[tool.uv]
package = true

[tool.pyright]
include = ["src", "tests"] # Replace with your actual source folders
exclude = ["**/node_modules", "**/__pycache__"]
venvPath = "."             # The parent directory of your venv
venv = ".venv"             # The name of your venv folder (e.g., .venv, venv, env)
